# Macra

./: Macri.hs  Main.hs  Makefile.in  README.md  Rakefile  configure.in
Macra/: .gitignore  Compiler.hs  Finder.hs  Parser.hs  VM.hs
doc/: syntax-spec.txt
examples/: Quasar.macra  all.macra  any.macra  bool.macra  boolMacro.macra  closure.macra  cmp.macra  comment.macra  cons-car-cdr.macra  context.macra  contextFooBar.macra  empty-program.macra  fizzbuzz.macra  funcall-lambda.macra  hello.macra  if-function.macra  if-modifier.macra  if-then-else.macra  if.macra  ifopt.macra  jslike-callee.macra  keyword.macra  lambda.macra  lazyCompiler.macra  let.macra  list-literal.macra  list.macra  macro.macra  map.macra  quasar.macra  quoted-symbol.macra  recurExpand.macra  semicolon.macra  shebang.macra  showClosure.macra  test.macra  where.macra
misc/: macra-mode.el  macra.rb
pure/: case.macra  prelude.macra
pure/control/: monad.macra
pure/control/monad/: state.macra
pure/data/: map.macra
pure/prelude/: compose.macra  flip.macra  lookup.macra  map.macra  namespace.macra
spec/: CompilerSpec.hs  ParserSpec.hs  parser_spec.rb  parser_spec.rb~
